--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // CameraX
-//    implementation 'androidx.camera:camera-camera2:1.3.0-alpha06'
-//    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha06'
-//    implementation 'androidx.camera:camera-view:1.3.0-alpha06'
-    // CameraX
     implementation 'androidx.camera:camera-camera2:1.2.2'
     implementation 'androidx.camera:camera-lifecycle:1.2.2'
     implementation 'androidx.camera:camera-view:1.2.2'
+    implementation 'androidx.camera:camera-core:1.2.2'
 
 
 
